# esp32-firmware

./: .gitignore  README.md  README.rst  repo_overview.rst  update_repo_overview.py
provisioning/: .gitignore  99-esptester-1.rules  99-esptester-2.rules  99-warp4-esptester-1.rules  blackbox.py  clone-esp32-label.py  comcu_flasher.py  esp-gui.py  esp32.ezpx  esp32.prn  material.txt  ntpserver.py  pib_compare.py  print-esp32-label-demo.sh  print-esp32-label.py  provision_stage_0.py  provision_stage_0.sh  provision_stage_0_energy_manager.sh  provision_stage_0_energy_manager_v2.sh  provision_stage_0_esp32.sh  provision_stage_0_esp32_ethernet.sh  provision_stage_0_install.txt  provision_stage_0_smart_energy_broker.sh  provision_stage_0_warp1.py  provision_stage_0_warp1.sh  provision_stage_0_warp2.py  provision_stage_0_warp2.sh  provision_stage_0_warp3.sh  provision_stage_1.py  provision_stage_1_esp32.py  provision_stage_1_esp32_ethernet.py  provision_stage_1_warp1.py  provision_stage_1_warp2.py  provision_stage_1_warp_esp32_ethernet.py  provision_stage_2.py  provision_stage_2_energy_manager.py  provision_stage_2_energy_manager_v2.py  provision_stage_2_install.txt  provision_stage_2_warp1.py  provision_stage_2_warp2.py  (+10 more)
provisioning/provision_common/: bricklet_evse_v2.py  bricklet_nfc.py  inventory.py  provision_common.py  sdm_simulator.py  wifi_pass.py  zbase32.py
provisioning/src/: dummy.py
provisioning/tinkerforge/: brick_dc.py  brick_esp32.py  brick_esp32_ethernet.py  brick_hat.py  brick_hat_zero.py  brick_imu.py  brick_imu_v2.py  brick_master.py  brick_red.py  brick_servo.py  brick_silent_stepper.py  brick_stepper.py  brick_unknown_v2.py  bricklet_accelerometer.py  bricklet_accelerometer_v2.py  bricklet_air_quality.py  bricklet_ambient_light.py  bricklet_ambient_light_v2.py  bricklet_ambient_light_v3.py  bricklet_analog_in.py  bricklet_analog_in_v2.py  bricklet_analog_in_v3.py  bricklet_analog_out.py  bricklet_analog_out_v2.py  bricklet_analog_out_v3.py  bricklet_arinc429.py  bricklet_barometer.py  bricklet_barometer_v2.py  bricklet_can.py  bricklet_can_v2.py  bricklet_co2.py  bricklet_co2_v2.py  bricklet_color.py  bricklet_color_v2.py  bricklet_common_test.py  bricklet_compass.py  bricklet_current12.py  bricklet_current25.py  bricklet_dc_v2.py  bricklet_distance_ir.py  (+129 more)
software/: .clang-format  .clangd  .gitattributes  .gitignore  Cargo.toml  GD-firmware-downloader.sh  README.md  README.txt  bf  bfum  bnf  bnfum  build.rs  build_all.py  changelog_co2.txt  changelog_co2ampel.txt  changelog_eltako.txt  changelog_energy_manager.txt  changelog_energy_manager_v2.txt  changelog_esp32.txt  changelog_esp32_ethernet.txt  changelog_meter_simulator.txt  changelog_smart_energy_broker.txt  changelog_warp.txt  changelog_warp2.txt  changelog_warp3.txt  changelog_warp4.txt  changelog_warpAC011K.txt  changelog_warpSDR3.txt  check_python_shebang.py  clang_format.py  class_size  co2ampel.ini  convert_api_info.py  copy_bindings.py  coredump.py  coverity.txt  decode  default_16MB_secure.csv  default_8MB_coredump.csv  (+59 more)
software/.cargo/: config.toml
software/best_practices/: String.txt
software/boards/: esp32_4mb.json  esp32_AC011K.json  esp32_AC011K4M.json  esp32_SonoffDualR3.json  esp32_brick.json  esp32_ethernet_brick.json  esp32_ethernet_brick_secure.json
software/include/: readme.txt
software/lib-builder/: README.md  apply_patches.py  build_idf_libs.py  create_defconfig.py  defconfig.esp32brick  defconfig.esp32ethernetbrick  defconfig.esp32secure  menuconfig.py  merge_defconfig.py
software/lib_builder/: README.md  create_defconfig.py  menuconfig.py
software/signature/: check.py  config.ini.example  keygen.py  readme.txt  sign.py  verify.py
software/src/: TFJson.h  (+55 more)
(+2687 files in other folders)
