[project]
name = "esp32"
dynamic = ["version"]
requires-python = "==3.12.*"
dependencies = [
    "esptool",  # FIXME: moved from test-runner here for now. it's needed here, otherwise the platformio tool-esptoolpy package is broken
    "platformio",
    "pyphen",
    "tinkerforge >= 2.1.31", # 2.1.31 adds Industrial Dual AC In Bricklet
    "tinkerforge_util >= 1.5.1",
]

[dependency-groups]
web-server-proxy = [
    "flask",
    "flask_sock",
    "websocket-client",
]

sun-spec-model-generator = [
    "Xlsx2csv",
]

test-runner = [
    "junit-xml",
    #"esptool",  # FIXME: moved to main dependencies for now
]

tests = [
    {include-group = "test-runner"},
    # FIXME: add all test dependencies here
]
