[project]
name = "esp32"
dynamic = ["version"]
requires-python = "==3.12.*"
dependencies = [
    "esptool",  # FIXME: moved from test-runner here for now. it's needed here, otherwise the platformio tool-esptoolpy package is broken
    "platformio",
    "pyphen",
    "nodeenv",
    "tinkerforge >= 2.1.31", # 2.1.31 adds Industrial Dual AC In Bricklet
    "tinkerforge_util >= 1.5.1",
]

[dependency-groups]
ff = [
    "pyserial",
]

web-server-proxy = [
    "flask",
    "flask_sock",
    "websocket-client",
]

sun-spec-model-generator = [
    "xlsx2csv",
]

test-runner = [
    "junit-xml",
    #"esptool",  # FIXME: moved to main dependencies for now
]

tests = [
    {include-group = "test-runner"},
    # FIXME: add all test dependencies here
    "scipy",
    "numpy",
    "requests" # web_server/connectivity
]

[tool.pio-hooks]
requires-node = "24.14.0"
requires-npm = "11.12.0"
